Trying to minimize the weird scrolling issues on iOS by setting overscroll behavior to none.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,6 @@
+html, body {
+  overscroll-behavior: none;
+}
 
 body {
   display: flex;
@@ -243,7 +246,7 @@ button.menu-item, button.submenu-item {
   #dashboard {
     padding-top: 3em;
   }
-  
+
   .main-section {
     padding-bottom: 4em
   }
